website/assets/styles/css/index.css
/* ... */
.home-body__title, .showcase-title {
  margin: 18px 0 8px 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: 30px;
  color: var(--text-color);
}

.card__image {
  display: flex;
  justify-content: center;
}

.card__image > img {
  width: 100%;
  max-width: 200px;
  height: auto;
}

.footer__contact-us {
  display: flex;
  height: 100%;
  width: fit-content;
  font-family: var(--main-font-family);
  align-items: center;
  margin-left: 20px;
  font-style: normal;
}

.watermark {
  display: flex;
  font-family: var(--main-font-family);
  margin-right: 20px;
}

.details__card {
  margin: 20px;
  display: flex;
  background-color: var(--color-grey);
  padding: 20px;
}

.details__card-text {
  margin-left: 20px;
}

.details__card-text > a {
  margin-top: 20px;
}

.details__card-title {
  color: var(--text-color);
  font-size: var(--font-size-title);
}

.details__card-description {
  color: var(--text-color);
  font-size: var(--font-size-description);
  margin-top: 10px;
}

.details__card-description > img {
  height: 14px;
  width: 14px;
}

.details__card-image > img {
  width: 150px;
  height: auto;
}

.details__card-buttons {
  margin-left: 20px;
}

.details__card-cost {
  margin-top: 10px;
  display: flex;
  flex-direction: row;
  font-size: 16px;
  font-family: var(--main-font-family);
  color: var(--text-color);
}

.details__card-cost > .cost {
  margin-left: 4px;
  font-weight: 700;
}

.get-it-now-button {
  appearance: none;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  background-color: #0271b6;
  padding: 0 18px;
  margin: 0 18px 4px 0;
  width: fit-content;
  text-decoration: none;
  font-family: var(--main-font-family);
  height: 30px;
  color: #fff;
  box-shadow: var(--box-shadow-btn);
  -webkit-border-radius: 3px;
  border-radius: 3px;
  border: 0;
  cursor: pointer;
  margin-top: 20px;
}

.card__buttons-container {
  display: none;
  margin-top: 20px;
  transition: .3s;
  opacity: 0;
  height: 40px;
}


header > a {
  display: flex;
  align-items: center
  margin-left: 10px;
  font-size: 22px;
  font-style: normal;
  text-decoration: none;
}

header > a > .logo-text {
  display: flex;
  align-items: center;
  margin-left: 8px;
  color: var(--text-color);
}

header > a:visited {
  color: var(--text-color);
}

.socials > a {
  color: black;
  text-decoration: none;
}

.socials > a:visited {
  color: black;
}

.socials > a > i {
  margin-right: 10px;
}

.preloader {
  /*фиксированное позиционирование*/
  position: fixed;
  /* координаты положения */
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  /* фоновый цвет элемента */
  background: #e0e0e0;
  /* размещаем блок над всеми элементами на странице (это значение должно быть больше, чем у любого другого позиционированного элемента на странице) */
  z-index: 1001;
}

.preloader__row {
  position: relative;
  top: 50%;
  left: 50%;
  width: 70px;
  height: 70px;
  margin-top: -35px;
  margin-left: -35px;
  text-align: center;
  animation: preloader-rotate 2s infinite linear;
}

.preloader__item {
  position: absolute;
  display: inline-block;
  top: 0;
  background-color: #337ab7;
  border-radius: 100%;
  width: 35px;
  height: 35px;
  animation: preloader-bounce 2s infinite ease-in-out;
}

.preloader__item:last-child {
  top: auto;
  bottom: 0;
  animation-delay: -1s;
}

@keyframes preloader-rotate {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes preloader-bounce {

  0%,
  100% {
    transform: scale(0);
  }

  50% {
    transform: scale(1);
  }
}

.loaded_hiding .preloader {
  transition: 0.3s opacity;
  opacity: 0;
}

.loaded .preloader {
  display: none;
}

.breadcrumbs-separator {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 6px;
}

.breadcrumbs-text {
  margin: 0;
}

.highcharts-root {
  width: 100% !important;
  height: 100% !important;
}

.highcharts-container {
  width: auto !important;
  height: auto !important;
}

.columns-container {
  display: grid;
  grid-template-columns: 400px auto;
  height: 100%;
}

.left-column {
  display: flex;
  flex-direction: column;
  padding-left: 20px;
}

.left-column__title {
  color: var(--text-color);
  font-family: var(--main-font-family);
  font-size: 20px;
  margin-bottom: 20px;
}

.left-column > .btn {
  margin-bottom: 10px;
}

.disabled {
  opacity: .5;
  pointer-events: none;
  cursor: not-allowed;
}

#lightgallery {
  display: flex;
  flex-wrap: wrap;
}

#lightgallery > a {
  margin: 10px;
}

#lightgallery > a > img {
  width: 640px;
  height: 320px;
}

.custom-visual__description {
  margin: 20px;
  display: flex;
  flex-direction: column;
  font-family: var(--main-font-family);
  color: var(--text-color);
}

.main-features__title, .most-popular-use-cases__title {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 20px;
}

.custom-visual__description-text {
  font-size: 16px;
  font-weight: 400;
  margin-top: 10px;
}

.reports-card {
  display: flex;
  flex-direction: column;
  background: var(--color-grey);
  border-radius: 5px;
  min-width: 480px;
  max-height: 240px;
  position: relative;
}

.reports-card__top-section {
  display: flex;
  align-items: center;
  padding: 20px;
}

.reports-card-buttons__container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  opacity: 0;
  position: absolute;
  bottom: 0;
  transition: .3s;
  width: 100%;
}

.reports-card__wrapper:hover > .reports-card{
  filter: grayscale(70%);
  filter: brightness(0.4)
}

.reports-card__wrapper {
  position: relative;
}

.reports-card__wrapper:hover > .reports-card-buttons__container {
  opacity: 1;
  transition: .3s;
}

.reports-card__wrapper:hover > .reports-card-buttons__container > .reports-card-buttons__container-bottom > .btn {
  background: var(--color-grey);
}

.reports-card-details-button > .btn {
  width: auto;
  margin: 10px 10px 0 10px;
  background: var(--color-grey);
}

.reports-card-buttons__container-bottom {
  display: flex;
}
/* ... */

